--- a/packages/automounter-smb/unit/automounter-smb.service
+++ b/packages/automounter-smb/unit/automounter-smb.service
@@ -1,13 +1,12 @@
 [Unit]
 Description=Mount Samba/CIFS resources
+After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/automount_smb
-ExecStop=/usr/bin/pre-umount
+ExecStart=/usr/bin/automount_smb.sh
 RemainAfterExit=yes
-Wants=network.target
-After=network.target
+
 
 [Install]
 WantedBy=multi-user.target
