--- a/packages/libva/build
+++ b/packages/libva/build
@@ -1,10 +1,13 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
+mkdir -p m4
 do_autoconf
+
 do_configure \
   --with-drivers-path=$XORG_PATH_VAAPI \
   --disable-dummy-driver \
