--- a/packages/mysql/build
+++ b/packages/mysql/build
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 mkdir -p objdir-host
 cd objdir-host
@@ -11,7 +12,7 @@ do_configure host \
 make
 cd ..
 
-HOST_GEN_LEX_HASH="$ROOT/$BUILD/$1*/objdir-host/sql/gen_lex_hash"
+HOST_GEN_LEX_HASH="$ROOT/$PKG_BUILD_DIR/objdir-host/sql/gen_lex_hash"
 sed -i "s:\./gen_lex_hash:${HOST_GEN_LEX_HASH}:g" sql/Makefile.in
 
 export ac_cv_c_stack_direction=-1
