--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -714,6 +714,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_xbmc is not set
 # CONFIG_PKG_xbmc-addon-vdr is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
+# CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
