--- a/config/platforms/arm/omap4/boot.cfg
+++ b/config/platforms/arm/omap4/boot.cfg
@@ -1,6 +1,4 @@
-setenv openbricks-args "console=ttyO2,115200n8 root=/dev/mmcblk0p2 rootwait"
-setenv omap-args "mem=460M@0x80000000 mem=256M@0xA0000000"
-setenv omap-display-args "vram=40M consoleblank=0 omapdss.def_disp=_DISPLAY_"
-setenv bootargs "${openbricks-args} ${omap-args} ${omap-display-args}"
-fatload mmc 0:1 0x80300000 uImage
-bootm 0x80300000
+fatload mmc 0:1 0x80000000 uImage
+setenv bootargs rw vram=32M fixrtc mem=1G@0x80000000 root=/dev/mmcblk0p2 console=ttyO2,115200n8 rootwait
+bootm 0x80000000
+
