--- a/packages/pcre/build
+++ b/packages/pcre/build
@@ -5,7 +5,7 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
-make distclean
+make distclean || true
 do_configure \
   --enable-utf8 \
   --enable-unicode-properties \
