--- a/packages/vdr-plugin-xvdr/build
+++ b/packages/vdr-plugin-xvdr/build
@@ -2,11 +2,12 @@
 
 . config/options
 
-$SCRIPTS/build vdr
+get_meta vdr
+VDR_VERSION=$PKG_VERSION
 
-VDR_DIR=`basename $BUILD/vdr-1*`
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 make all \
-  VDRDIR="../$VDR_DIR" \
+  VDRDIR="$ROOT/$BUILD/vdr-${VDR_VERSION}" \
   LIBDIR="."
