--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -76,7 +76,7 @@ export PYTHON_SITE_PKG=$LIB_PREFIX/lib/python2.7/site-packages
 export PYTHON_EXTRA_LIBS="-lpthread -ldl -lutil"
 export PYTHON_EXTRA_LDFLAGS="-Xlinker -export-dynamic"
 
-export ac_cv_path_JAVA_EXE="/usr/bin/java"
+#export ac_cv_path_JAVA_EXE="/usr/bin/java"
 export TAGLIB_CFLAGS="$CFLAGS"
 export SWIG_LIB=$ROOT/$TOOLCHAIN/share/swig/$SWIG_VER
 
