--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -60,7 +60,7 @@ CONFIG_OPT_TARGET_CPU="cortex-a9"
 CONFIG_FPU_OPTIMIZATIONS_VFP3D16=y
 # CONFIG_FPU_OPTIMIZATIONS_NEON is not set
 # CONFIG_FPU_OPTIMIZATIONS_NONE is not set
-# CONFIG_OPT_ARM_HARDFLOAT_ABI is not set
+CONFIG_OPT_ARM_HARDFLOAT_ABI=y
 CONFIG_OPT_THUMB=y
 
 #
@@ -587,7 +587,7 @@ CONFIG_PKG_sqlite=y
 # CONFIG_PKG_sysfsutils is not set
 # CONFIG_PKG_syslink is not set
 # CONFIG_PKG_syslink-d2cmap is not set
-# CONFIG_PKG_taglib is not set
+CONFIG_PKG_taglib=y
 CONFIG_PKG_talloc=y
 # CONFIG_PKG_tegra-gl is not set
 # CONFIG_PKG_tegra-libs is not set
@@ -730,6 +730,7 @@ CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
+# CONFIG_PKG_vdr-plugin-vnsiserver is not set
 CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -784,8 +785,8 @@ CONFIG_OPT_xbmc_dove=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-CONFIG_PKG_xbmc-addon-xvdr=y
 CONFIG_PKG_xbmc-addon-vuplus=y
+# CONFIG_PKG_xbmc-addon-xvdr is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
