--- a/packages/gst-plugins-gl/build
+++ b/packages/gst-plugins-gl/build
@@ -5,10 +5,12 @@
 cd $BUILD/$1*
 
 export LIBS="-lGLU -lGL -lstdc++"
+
+do_autoconf
 do_configure \
             --enable-largefile \
             --disable-examples \
             --disable-valgrind \
 
-make
+make ERROR_CFLAGS=""
 make_install
