--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121230-r15669"
+CONFIG_KERNELVERSION="devel-20121229-r15667"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -92,16 +92,18 @@ CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_TARGET_ISO is not set
 CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_PXE is not set
-# CONFIG_OPT_TARGET_TARBALL is not set
+CONFIG_OPT_TARGET_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
-# CONFIG_TIMEZONE is not set
+CONFIG_TIMEZONE=y
+CONFIG_OPT_INCLUDED_TIMEZONES="all"
+CONFIG_OPT_TIMEZONE=""
 CONFIG_KEYMAP_US=y
 # CONFIG_KEYMAP_FR is not set
 # CONFIG_KEYMAP_DE is not set
 CONFIG_LOCALE=y
-CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
+CONFIG_OPT_INCLUDED_LOCALES=""
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
 
 #
@@ -221,7 +223,7 @@ CONFIG_OPT_SAMBA=y
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
-CONFIG_PKG_nvram-wakeup=y
+# CONFIG_PKG_nvram-wakeup is not set
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
@@ -235,8 +237,9 @@ CONFIG_PKG_opkg=y
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
-# CONFIG_PKG_eventlircd is not set
-# CONFIG_PKG_lirc is not set
+CONFIG_PKG_eventlircd=y
+CONFIG_PKG_lirc=y
+CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
 # CONFIG_PKG_sgx540-OMAP44xx-drv is not set
@@ -254,7 +257,6 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
-CONFIG_PKG_mpd=m
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -280,7 +282,7 @@ CONFIG_PKG_firmware-dvb-dib0700=y
 CONFIG_PKG_firmware-dvb-dibusb-mb=y
 CONFIG_PKG_firmware-dvb-dibusb-mc=y
 CONFIG_PKG_firmware-dvb-dvbsky-S9xx=y
-CONFIG_PKG_firmware-dvb-it91xx=y
+# CONFIG_PKG_firmware-dvb-it91xx is not set
 CONFIG_PKG_firmware-dvb-nxt200x=y
 CONFIG_PKG_firmware-dvb-or51132=y
 CONFIG_PKG_firmware-dvb-or51211=y
@@ -469,7 +471,7 @@ CONFIG_PKG_libdaemon=y
 CONFIG_PKG_libevent=y
 # CONFIG_PKG_libexif is not set
 CONFIG_PKG_libffi=y
-# CONFIG_PKG_libftdi is not set
+CONFIG_PKG_libftdi=y
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
 # CONFIG_PKG_libgles-gc is not set
@@ -634,7 +636,9 @@ CONFIG_PKG_pastebincl=y
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
-# CONFIG_PKG_pvr is not set
+CONFIG_PKG_pvr=y
+# CONFIG_OPT_pvr_tvheadend is not set
+# CONFIG_OPT_pvr_vdr is not set
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
@@ -689,6 +693,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+CONFIG_PKG_mpd=m
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
@@ -770,7 +775,7 @@ CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
 # CONFIG_OPT_xbmc_externalffmpeglibav is not set
-# CONFIG_OPT_xbmc_pvr is not set
+CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
 CONFIG_OPT_xbmc_libnfs=y
@@ -1014,7 +1019,7 @@ CONFIG_OPT_linux_alsa=y
 # CONFIG_OPT_linux_dab is not set
 CONFIG_OPT_linux_dvb=y
 CONFIG_OPT_linux_ethernet=y
-# CONFIG_OPT_linux_hwmon is not set
+CONFIG_OPT_linux_hwmon=y
 # CONFIG_OPT_linux_gameport is not set
 # CONFIG_OPT_linux_ipv6 is not set
 CONFIG_OPT_linux_lirc=y
@@ -1038,7 +1043,7 @@ CONFIG_PKG_pciutils=y
 CONFIG_PKG_systemd=y
 CONFIG_OPT_systemd_devtools=y
 CONFIG_OPT_SYSTEMD=y
-# CONFIG_PKG_timezone-data is not set
+CONFIG_PKG_timezone-data=y
 CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
