--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -238,6 +238,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_acx is not set
 # CONFIG_PKG_appleir is not set
 # CONFIG_PKG_ar6k is not set
+# CONFIG_PKG_bcmwl is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_crystalhd is not set
 # CONFIG_PKG_cwiid is not set
@@ -261,7 +262,6 @@ CONFIG_PKG_e2fsprogs=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 CONFIG_PKG_gnu-fdisk=y
-# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mtd-utils is not set
 # CONFIG_PKG_nfs-utils is not set
 # CONFIG_PKG_ntfs-3g is not set
@@ -668,6 +668,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_livepause is not set
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
