--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -270,6 +270,7 @@ CONFIG_PKG_plymouth-lite=y
 # CONFIG_PKG_acx is not set
 CONFIG_PKG_appleir=y
 # CONFIG_PKG_ar6k is not set
+# CONFIG_PKG_bcmwl is not set
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
@@ -294,7 +295,6 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
-# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -743,6 +743,7 @@ CONFIG_PKG_libvdpau=y
 CONFIG_PKG_livepause=y
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
