--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -272,6 +272,7 @@ CONFIG_PKG_pcmciautils=y
 # CONFIG_PKG_acx is not set
 # CONFIG_PKG_appleir is not set
 # CONFIG_PKG_ar6k is not set
+CONFIG_PKG_bcmwl=m
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 CONFIG_PKG_cwiid=y
@@ -296,7 +297,6 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
-CONFIG_PKG_mpd=y
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -733,6 +733,7 @@ CONFIG_PKG_libvdpau=y
 # CONFIG_PKG_livepause is not set
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+CONFIG_PKG_mpd=y
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
