--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121230-r15669"
+CONFIG_KERNELVERSION="devel-20130106-r15736"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -227,6 +227,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
+# CONFIG_PKG_gutenprint is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
@@ -244,7 +245,6 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
-CONFIG_PKG_mpd=m
 # CONFIG_PKG_mtd-utils is not set
 # CONFIG_PKG_nfs-utils is not set
 # CONFIG_PKG_ntfs-3g is not set
@@ -670,6 +670,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+CONFIG_PKG_mpd=m
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
