--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121230-r15669"
+CONFIG_KERNELVERSION="devel-20130106-r15736"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -244,6 +244,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
+# CONFIG_PKG_gutenprint is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_ndiswrapper is not set
 # CONFIG_PKG_s2-liplianin is not set
