--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121230-r15669"
+CONFIG_KERNELVERSION="devel-20130106-r15736"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -244,6 +244,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 CONFIG_PKG_eventlircd=y
+CONFIG_PKG_gutenprint=m
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_s2-liplianin is not set
@@ -263,7 +264,6 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
-CONFIG_PKG_mpd=y
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -715,6 +715,7 @@ CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+CONFIG_PKG_mpd=y
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
