--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121230-r15669"
+CONFIG_KERNELVERSION="devel-20130106-r15736"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -278,6 +278,7 @@ CONFIG_PKG_crystalhd=y
 CONFIG_PKG_cwiid=y
 CONFIG_PKG_drivers-jmicron-ethernet=m
 CONFIG_PKG_eventlircd=y
+# CONFIG_PKG_gutenprint is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 CONFIG_PKG_ndiswrapper=m
