--- a/packages/alsa-lib/config/Kirkwood_SPDIF.conf
+++ b/packages/alsa-lib/config/Kirkwood_SPDIF.conf
@@ -72,8 +72,8 @@ Kirkwood_SPDIF.pcm.iec958.0 {
 				lock true
 				preserve true
 				optional true
-				value [ 0x06 0x82 0x00 0x01 ]
-#				value [ $AES0 $AES1 $AES2 $AES3 ]
+#				value [ 0x06 0x82 0x00 0x01 ]
+				value [ $AES0 $AES1 $AES2 $AES3 ]
 			}
 		]
 	}
@@ -102,8 +102,8 @@ Kirkwood_SPDIF.pcm.hdmi.0 {
 				lock true
 				preserve true
 				optional true
-				value [ 0x06 0x82 0x00 0x01 ]
-#				value [ $AES0 $AES1 $AES2 $AES3 ]
+#				value [ 0x06 0x82 0x00 0x01 ]
+				value [ $AES0 $AES1 $AES2 $AES3 ]
 			}
 		]
 	}
